# amlpify-amqp-utils

./: .gitignore  README.md  pyproject.toml  pyyproject.toml
src/amqp/: rabbit.py
